# demo-chat-app

./: .env_example  main.py  pyproject.toml
src/labs/: L1_1_sync_chat.py  L1_2_async_chat.py  L2_1_web_search_tool.py  L2_2_code_interpreter_tool.py  L2_3_function_tool.py  custom_functions.py
