[project]
name = "chat-app"
version = "0.1.0"
description = "Generative AI Chat Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.1",
    "asyncio>=4.0.0",
    "azure-ai-projects>=2.3.0",
    "azure-identity>=1.25.3",
    "openai>=2.45.0",
    "python-dotenv>=1.2.2",
]
